feat/ai-feat:AI 중복 요청 차단 및 재시도 제한과 출력 최적화