@@ -21,6 +21,8 @@ public class AiDraftService {
     private final AiRateLimit limit;
     private final AiContractContext context;
     private final ObjectMapper mapper;
+    private final com.team2.postservice.ai.AiDraftCache cache;
+    static final Set<String> SERVER_FIELDS = Set.of("totalAmount", "startDate", "endDate");
     static final Map<String, Integer> TERMS = Map.ofEntries(
             Map.entry("title",120), Map.entry("scope",4000), Map.entry("exclusions",2000), Map.entry("materials",2000),
             Map.entry("totalAmount",32), Map.entry("paymentTerms",2000), Map.entry("startDate",10), Map.entry("endDate",10),
@@ -34,13 +36,14 @@ public class AiDraftService {
         if (category != null && !category.isBlank()) try { PostCategory.valueOf(category); } catch (IllegalArgumentException e) { throw AiException.input("카테고리를 확인해주세요."); }
         gemini.requireAvailable();
         var parts = images.parts(files);
-        limit.acquire(user);
         parts.add(Map.of("text", "현재 입력(참고 자료): " + Map.of("title", title, "content", content, "category", category)));
-        var result = gemini.generate(COMMON + " 사진에서 제품 종류와 외관 손상을 관찰하고 의뢰 제목/설명/카테고리를 제안하세요. "
-                + "가격·수리 가능 여부·내부 고장을 확정하지 마세요. 라벨 등 근거가 없으면 modelCandidate는 null입니다. "
-                + "액정과 전면 유리 손상을 단정하지 말고 화면 출력/터치 등 확인 질문을 만드세요.", parts, postSchema());
-        validatePost(result);
-        return result;
+        return cache.get(cacheKey(user, "post", parts), () -> limit.acquire(user), () -> {
+            var result = gemini.generate(COMMON + " 사진에서 제품 종류와 외관 손상을 관찰하고 의뢰 제목/설명/카테고리를 제안하세요. "
+                    + "제목은 100자, 본문은 800자 이내로 간결하게 작성하세요. 가격·수리 가능 여부·내부 고장을 확정하지 마세요. 근거 없는 모델명은 쓰지 마세요. "
+                    + "액정과 전면 유리 손상을 단정하지 말고 확인이 필요한 내용은 본문에 짧게 포함하세요.", parts, postSchema());
+            validatePost(result);
+            return result;
+        });
     }
 
     public JsonNode contract(Long user, Long room, Long baseId, Map<String, String> currentTerms, String instructions) {
@@ -52,26 +55,44 @@ public class AiDraftService {
         String input;
         try { input = mapper.writeValueAsString(sources); } catch (Exception e) { throw AiException.input("입력을 확인해주세요."); }
         if (input.length() > 60000) throw AiException.input("대화와 입력 내용이 너무 길어 자동 정리할 수 없습니다. 계약 내용을 직접 작성해주세요 (60,000자 이하).");
-        gemini.requireAvailable(); limit.acquire(user);
-        var result = gemini.generate(COMMON + " 채팅방의 텍스트 대화를 시간순으로 읽고 합의한 내용을 요약 정리하여 계약서 13개 항목의 초안을 작성하세요. "
-                + "의뢰인의 요청과 수리자의 답변을 구분하고, 나중에 양측이 합의한 변경사항을 반영하세요. 제안이나 질문만으로 합의를 확정하지 마세요. "
-                + "기존 입력값을 존중하고 상충하는 조건은 conflicts에 기록하세요. "
-                + "각 필드 출처는 실제 제공된 sourceId와 그 자료의 정확한 연속 인용문 quote로 기록하세요. "
-                + "근거 없는 값은 null로 두세요. 표준 문구 제안은 sourceId=SUGGESTED_CLAUSE, quote=''로 구분하세요. "
-                + "미합의 보증기간·위약금·지급조건을 사실로 만들지 마세요. startDate/endDate는 해당 USER_ 필드가 있을 때만 그대로 복사하고 그 외는 null로 두세요. "
-                + "totalAmount는 null로 반환하세요. 서버가 채택 제안의 PROPOSAL_AMOUNT를 직접 입력합니다. 대화나 현재 입력의 금액이 제안 금액과 다르면 conflicts에 알려주세요.",
-                List.of(Map.of("text", input)), contractSchema(sources.keySet()));
-        if (!result.path("suggestedTerms").isObject() || !result.path("fieldSources").isObject()) throw AiException.output();
-        // The model never determines money: use the proposal linked to the verified deal.
-        ((com.fasterxml.jackson.databind.node.ObjectNode) result.path("suggestedTerms")).put("totalAmount", sources.get("PROPOSAL_AMOUNT"));
-        ((com.fasterxml.jackson.databind.node.ObjectNode) result.path("fieldSources")).putObject("totalAmount")
-                .put("sourceId", "PROPOSAL_AMOUNT").put("quote", sources.get("PROPOSAL_AMOUNT"));
-        validateContract(result, sources, currentTerms);
+        gemini.requireAvailable();
+        var result = cache.get(cacheKey(user, "contract", Arrays.asList(room, baseId, new TreeMap<>(sources))), () -> limit.acquire(user), () -> {
+            var generated = gemini.generate(COMMON + " 채팅방의 텍스트 대화를 시간순으로 읽고 합의한 내용을 요약 정리하여 계약서의 텍스트 항목만 간결하게 작성하세요. 각 항목은 최대 500자, 제목은 120자 이내로 작성하세요. "
+                    + "의뢰인의 요청과 수리자의 답변을 구분하고, 나중에 양측이 합의한 변경사항을 반영하세요. 제안이나 질문만으로 합의를 확정하지 마세요. "
+                    + "기존 입력값을 존중하고 상충하는 조건은 conflicts에 기록하세요. "
+                    + "각 필드 출처는 실제 제공된 sourceId와 그 자료의 정확한 연속 인용문 quote로 기록하세요. "
+                    + "근거 없는 값은 null로 두세요. 표준 문구 제안은 sourceId=SUGGESTED_CLAUSE, quote=''로 구분하세요. "
+                    + "미합의 보증기간·위약금·지급조건을 사실로 만들지 마세요. 금액과 날짜는 서버가 채우므로 출력하지 마세요. "
+                    + "서버가 채택 제안의 PROPOSAL_AMOUNT를 직접 입력합니다. 대화나 현재 입력의 금액이 제안 금액과 다르면 conflicts에 알려주세요.",
+                    List.of(Map.of("text", input)), contractSchema(sources.keySet()));
+            fillServerFields(generated, sources, currentTerms);
+            validateContract(generated, sources, currentTerms);
+            return generated;
+        });
         // A separate short transaction observes changes made while the provider was running.
         context.check(room, user, baseId);
         ((com.fasterxml.jackson.databind.node.ObjectNode) result).putPOJO("baseId", baseId);
         ((com.fasterxml.jackson.databind.node.ObjectNode) result).put("messageCount", sources.keySet().stream().filter(key -> key.startsWith("MESSAGE_")).count());
         return result;
+    }
+
+    private String cacheKey(Long user, String feature, Object input) {
+        try {
+            byte[] bytes = mapper.copy().configure(SerializationFeature.ORDER_MAP_ENTRIES_BY_KEYS, true).writeValueAsBytes(input);
+            return user + ":" + feature + ":" + HexFormat.of().formatHex(java.security.MessageDigest.getInstance("SHA-256").digest(bytes));
+        } catch (Exception e) { throw AiException.input("입력을 확인해주세요."); }
+    }
+    static void fillServerFields(JsonNode result, Map<String, String> sources, Map<String, String> current) {
+        if (!result.path("suggestedTerms").isObject() || !result.path("fieldSources").isObject()) throw AiException.output();
+        var terms = (com.fasterxml.jackson.databind.node.ObjectNode) result.path("suggestedTerms");
+        var evidence = (com.fasterxml.jackson.databind.node.ObjectNode) result.path("fieldSources");
+        for (String field : SERVER_FIELDS) {
+            String value = field.equals("totalAmount") ? sources.get("PROPOSAL_AMOUNT") : current.get(field);
+            if (value != null && value.isBlank()) value = null;
+            terms.put(field, value);
+            evidence.putObject(field).put("sourceId", value == null ? "SUGGESTED_CLAUSE" : field.equals("totalAmount") ? "PROPOSAL_AMOUNT" : "USER_" + field)
+                    .put("quote", value == null ? "" : value);
+        }
     }
 
     static void inputText(String value, int max) {
@@ -103,15 +124,16 @@ public class AiDraftService {
         return Map.of("type", "object", "properties", properties, "required", new ArrayList<>(properties.keySet()), "additionalProperties", false);
     }
     static Map<String, Object> postSchema() {
-        return objectSchema(Map.of("suggestion", objectSchema(Map.of("title", textSchema(100), "content", textSchema(2000),
-                "category", Map.of("type", "string", "enum", Arrays.stream(PostCategory.values()).map(Enum::name).toList()))),
-                "productType", nullableText(100), "modelCandidate", nullableText(100), "observations", arraySchema(), "questions", arraySchema(), "warnings", arraySchema()));
+        return objectSchema(Map.of("suggestion", objectSchema(Map.of("title", textSchema(100), "content", textSchema(800),
+                "category", Map.of("type", "string", "enum", Arrays.stream(PostCategory.values()).map(Enum::name).toList())))));
     }
+
     static Map<String, Object> contractSchema(Set<String> sourceIds) {
         Map<String, Object> terms = new LinkedHashMap<>(), sources = new LinkedHashMap<>();
         var allowed = new ArrayList<>(sourceIds); allowed.add("SUGGESTED_CLAUSE");
         TERMS.forEach((field, max) -> {
-            terms.put(field, nullableText(max));
+            if (SERVER_FIELDS.contains(field)) return;
+            terms.put(field, nullableText(Math.min(max, 500)));
             sources.put(field, objectSchema(Map.of("sourceId", Map.of("type", "string", "enum", allowed), "quote", textSchema(2000))));
         });
         return objectSchema(Map.of("suggestedTerms", objectSchema(terms), "fieldSources", objectSchema(sources), "conflicts", arraySchema(), "warnings", arraySchema()));
@@ -131,19 +153,17 @@ public class AiDraftService {
         node.forEach(value -> text(value, 500, false));
     }
     static void validatePost(JsonNode result) {
-        keys(result, Set.of("suggestion", "productType", "modelCandidate", "observations", "questions", "warnings"));
+        keys(result, Set.of("suggestion"));
         var suggestion = result.path("suggestion"); keys(suggestion, Set.of("title", "content", "category"));
-        if (text(suggestion.path("title"),100,false).isBlank() || text(suggestion.path("content"),2000,false).isBlank()) throw AiException.output();
+        if (text(suggestion.path("title"),100,false).isBlank() || text(suggestion.path("content"),800,false).isBlank()) throw AiException.output();
         try { PostCategory.valueOf(text(suggestion.path("category"),50,false)); } catch (IllegalArgumentException e) { throw AiException.output(); }
-        text(result.path("productType"),100,true); text(result.path("modelCandidate"),100,true);
-        for (String field : List.of("observations", "questions", "warnings")) strings(result.path(field));
     }
     static void validateContract(JsonNode result, Map<String, String> sources, Map<String, String> current) {
         keys(result, Set.of("suggestedTerms", "fieldSources", "conflicts", "warnings"));
         var termsNode = result.path("suggestedTerms"); keys(termsNode, TERMS.keySet()); keys(result.path("fieldSources"), TERMS.keySet());
         Map<String, String> terms = new HashMap<>(); List<String> missing = new ArrayList<>();
         TERMS.forEach((field, max) -> {
-            String value = text(termsNode.path(field), max, true); terms.put(field, value);
+            String value = text(termsNode.path(field), SERVER_FIELDS.contains(field) ? max : Math.min(max, 500), true); terms.put(field, value);
             var evidence = result.path("fieldSources").path(field); keys(evidence, Set.of("sourceId", "quote"));
             String source = text(evidence.path("sourceId"),100,false), quote = text(evidence.path("quote"),2000,false);
             if (!source.equals("SUGGESTED_CLAUSE") && !sources.containsKey(source)) throw AiException.output();
